Latest:
------
 ChangeLog last updated: r1537 2004-09-09
 Cumulative changes since last tarball.
 For even more detail, use "svn log" and "svn diff".

0.8_pre1
--------
 * remove all kernel 2.4.x compatibility crap

0.7.4 (api:76/proto:74)
-----
 * Fixed a critical bug with Linux-2.4.x and HIGHMEM!
 * Fixed a bug that only showed up with the HIGHMEM problem on 
   Linux-2.4.x -> It caused the resync process to starve.
 * The drbd.spec file now creates /dev/drbd in the post-install stage.
 * Fixed support for more than 2TB storage. Now DRBD supports up to
   3.99TB storage. It will also tell you, that it is not supported if 
   you try to set up a bigger device.
 * Debian's build rules file now knows about the adjust_drbd_config_h.sh
   file.
 * DRBD_DISABLE_SENDPAGE available in drbd_config.h

0.7.3 (api:75/proto:74)
-----
 * Fixed minor bugs in the handling of the generation counters.
 * prevent possible in-kernel buffer overflow in drbd_proc.c
 * Fixed debian's postinst script to create /dev/drbd? instead of /dev/nb?
 * drbd status:
   be nice to heartbeat, include "OK" in output.
 * added FullSync meta data flag to read/write gc.pl
 * make the RHEL3 happy (page_count no longer in mm.h, but in mm_inline.h)
 * [Patch by Pavel Semerad]. Also use the drbd_devfs_name on Linux-2.4.x
 * fix missing dependencies on drbd_config.h

0.7.2 (api:75/proto:74)
-----
  *) Proper handling of backing storage devices that occasionally fail 
     READA (=read ahead) requests. (E.g. LVM and MD)
  *) DRBD now fails READA requests itself, if a resynchronisation is running
     and it would need to fetch the block from its peer.
  *) "drbdadm adjust" had a race, which caused random errors. ( Missing
     waitpid() ). Fixed now.
  *) Proper subtract SyncPause times from the syncer performance numbers.
  *) Fix to the syncer progress bar in /proc/drbd.
  *) Fix to debian build rules.
	 
0.7.1 (api:75/proto:74)
-----
  *) Upgrade instructions for 0.6.x -> 0.7.0 and 0.7.0 -> 0.7.1