@@ -1,1 +1,3 @@
-start "run.sh" to run the benchmark app.
+Needs to be reviewed
+is untouched since at least the 0.6 days
+does not work with 0.7 currently
